--- a/src/components/Editor/Editor.scss
+++ b/src/components/Editor/Editor.scss
@@ -1,7 +1,9 @@
 @import "../../styles/colors.module";
 
 .editor {
-  width: 50%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
   & textarea {
     width: 100%;
     flex-grow: 1;
